--- a/grabbit/app/src/main/res/layout/fragment_account.xml
+++ b/grabbit/app/src/main/res/layout/fragment_account.xml
@@ -13,7 +13,7 @@
         <LinearLayout
             android:id="@+id/lin_lay_acc_1"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="270dp"
             android:background="@color/colorOrange"
             android:paddingTop="30dp"
             android:layout_alignParentStart="true"
@@ -26,7 +26,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
-                android:src="@drawable/userimg">
+                android:src="@drawable/userimage">
 
             </ImageView>
 
@@ -34,6 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Mark Evans"
+                android:layout_marginTop="15dp"
                 android:textAlignment="center"
                 android:textColor="#fff"
                 android:textSize="22sp"/>
@@ -53,8 +54,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <ImageView
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:tint="#b0b0b0"
                     android:src="@drawable/ic_perm_phone_msg_black_24dp"/>
                 <TextView
                     android:layout_gravity="center_vertical"
@@ -71,8 +73,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <ImageView
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:tint="#b0b0b0"
                     android:src="@drawable/ic_info_black_24dp"/>
                 <TextView
                     android:layout_gravity="center_vertical"
@@ -90,8 +93,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <ImageView
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:tint="#b0b0b0"
                     android:src="@drawable/ic_settings_black_24dp"/>
                 <TextView
 
