--- a/grabbit/app/src/main/res/layout/fragment_home.xml
+++ b/grabbit/app/src/main/res/layout/fragment_home.xml
@@ -29,8 +29,9 @@
             android:id="@+id/rv_product_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="15dp"
-            android:background="#F0F0F0"
+            android:paddingTop="15dp"
+            android:paddingBottom="5dp"
+            android:background="@color/white"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent">
