--- a/grabbit/app/src/main/res/layout/activity_information.xml
+++ b/grabbit/app/src/main/res/layout/activity_information.xml
@@ -48,7 +48,7 @@
                 android:layout_gravity="center|center_horizontal"
                 android:padding="15dp"
                 android:textAlignment="center"
-                android:text="Transactions"
+                android:text="@string/transactions"
                 android:textColor="@color/colorOrange"
                 android:textSize="25sp" />
         </LinearLayout>
@@ -128,7 +128,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="5dp"
-                android:text="Item purchased"
+                android:text="@string/item_purchased"
                 android:textSize="20sp"/>
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -149,6 +149,19 @@
 
 
         </LinearLayout>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_add_balance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/add_balance"
+            app:cornerRadius="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/purchase_count">
+
+        </com.google.android.material.button.MaterialButton>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -178,7 +191,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Scan QR code to get product list"
+                android:text="@string/scan_qr_code_to_get_product_list"
                 android:textColor="@color/colorOrange"
                 android:textSize="23sp" />
 
@@ -187,7 +200,7 @@
                 android:layout_marginTop="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Scan"
+                android:text="@string/scan"
                 app:cornerRadius="20dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
