--- a/grabbit/app/src/main/res/layout/activity_login.xml
+++ b/grabbit/app/src/main/res/layout/activity_login.xml
@@ -64,7 +64,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Don't Have Account Click here"
-            android:id="@+id/textView3"
+            android:id="@+id/txtViewSignUp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="30dp"
             android:textColor="#000000"
