--- a/grabbit/app/src/main/res/drawable/selector_xml_btn_orange.xml
+++ b/grabbit/app/src/main/res/drawable/selector_xml_btn_orange.xml
@@ -1,15 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true" >
-        <shape xmlns:android="http://schemas.android.com/apk/res/android">
-            <corners android:radius="5dp" />
-            <solid android:color="#FFA500" />
+        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="rectangle">
+            <corners android:radius="50dp"/>
+            <gradient
+                android:startColor="@color/colorOrange"
+                android:centerColor="#ff4500"
+                android:endColor="#ff4500"
+                />
         </shape>
     </item>
     <item >
-        <shape xmlns:android="http://schemas.android.com/apk/res/android">
-            <corners android:radius="5dp" />
-            <solid android:color="#FFA500" />
+        <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+            <corners android:radius="50dp"/>
+            <gradient
+                android:startColor="@color/colorOrange"
+                android:centerColor="#ff4500"
+                android:endColor="#ff4500"
+                />
         </shape>
     </item>
 </selector>
