--- a/grabbit/app/src/main/res/layout/activity_login.xml
+++ b/grabbit/app/src/main/res/layout/activity_login.xml
@@ -4,74 +4,116 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".login.LoginActivity">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <TextView
+        android:id="@+id/back_arrow"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="20dp"
+        android:paddingStart="5dp"
+        android:layout_marginStart="15dp"
+        android:drawableStart="@drawable/ic_keyboard_arrow_left_black_30dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </TextView>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_marginStart="30dp"
+        android:text="Welcome \nBack"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/back_arrow"
+        />
+
+    <TextView
+
+        android:id="@+id/txtViewSignUp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sign up"
+        android:contextClickable="true"
+        android:layout_marginBottom="30dp"
+        android:layout_marginStart="30dp"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintlyoutbottom"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@drawable/login_background"
-        android:padding="40dp">
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:src="@drawable/logo"
-            android:paddingTop="70dp"
-            />
-
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            android:ems="10"
-            android:id="@+id/edit_text_username"
-            android:drawableLeft="@drawable/ic_account_circle_black_24dp"
-            android:hint="Username"
-            android:layout_marginTop="50dp"
-            android:textColor="#000"
-            android:paddingLeft="0dp"
-            android:drawablePadding="5dp"
-            android:textColorHint="#999"/>
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:id="@+id/edit_text_password"
-            android:drawableLeft="@drawable/ic_lock_black_24dp"
-            android:hint="Password"
-            android:layout_marginTop="10dp"
-            android:textColor="#000"
-            android:paddingLeft="0dp"
-            android:drawablePadding="5dp"
-            android:textColorHint="#999"/>
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:text="Sign In"
-            android:id="@+id/btn_sign_in"
-            android:background="@drawable/selector_xml_btn_orange"
-            android:layout_gravity="center_horizontal"
-            />
+        android:layout_height="80dp"
+        android:layout_marginBottom="50dp"
+        app:layout_constraintBottom_toTopOf="@id/txtViewSignUp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Don't Have Account Click here"
-            android:id="@+id/txtViewSignUp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="30dp"
-            android:textColor="#000000"
+            android:layout_marginStart="30dp"
+            android:text="Sign in"
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            />
+        <TextView
+            android:id="@+id/btn_sign_in"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="40dp"
+            android:background="@drawable/selector_xml_btn_orange"
+            android:drawableStart="@drawable/ic_arrow_forward_black_24dp"
+            android:padding="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <EditText
+        app:layout_constraintBottom_toTopOf="@id/constraintlyoutbottom"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="match_parent"
+        android:layout_marginStart="30dp"
+        android:layout_height="wrap_content"
+        android:inputType="textEmailAddress"
+        android:ems="15"
+        android:textSize="14sp"
+        android:id="@+id/edit_text_password"
+        android:hint="Password"
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginTop="50dp"
+        android:textColor="@color/white"
+        android:paddingLeft="5dp"
+        android:drawablePadding="15dp"
+        android:textColorHint="#999"/>
+
+    <EditText
+        app:layout_constraintBottom_toTopOf="@id/edit_text_password"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:ems="15"
+        android:layout_marginEnd="40dp"
+        android:id="@+id/edit_text_username"
+        android:hint="Username"
+        android:textSize="14sp"
+        android:layout_marginStart="30dp"
+        android:layout_marginBottom="15dp"
+        android:textColor="#000"
+        android:paddingLeft="5dp"
+        android:drawablePadding="5dp"
+        android:textColorHint="#999"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
