--- a/grabbit/app/src/main/res/layout/activity_signup.xml
+++ b/grabbit/app/src/main/res/layout/activity_signup.xml
@@ -4,89 +4,150 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login_background"
+    android:background="@color/black"
     tools:context=".login.LoginActivity">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="40dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+    <TextView
+        android:id="@+id/back_arrow"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="20dp"
+        android:paddingStart="5dp"
+        android:layout_marginStart="15dp"
+        android:drawableStart="@drawable/ic_keyboard_arrow_left_black_30dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:contentDescription="@string/grabbitlogo"
-            android:src="@drawable/logo" />
+    </TextView>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_marginStart="30dp"
+        android:text="Create \naccount"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/back_arrow"
+        />
 
+    <TextView
 
-        <EditText
-            android:id="@+id/edit_text_username"
-            android:layout_width="match_parent"
+        android:id="@+id/txtview_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sign in"
+        android:contextClickable="true"
+        android:layout_marginBottom="30dp"
+        android:layout_marginStart="30dp"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintlyoutbottom"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_marginBottom="50dp"
+        app:layout_constraintBottom_toTopOf="@id/txtview_login"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:drawableStart="@drawable/ic_account_circle_black_24dp"
-            android:drawablePadding="5dp"
-            android:ems="10"
-            android:hint="@string/username"
-            android:inputType="text"
-            android:textColor="#000"
-            android:textColorHint="#999" />
+            android:layout_marginStart="30dp"
+            android:text="Sign up"
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <EditText
-            android:id="@+id/edit_text_fullname"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:drawableStart="@drawable/ic_account_circle_black_24dp"
-            android:drawablePadding="5dp"
-            android:ems="10"
-            android:hint="@string/full_name"
-            android:inputType="text"
-            android:textColor="#000"
-            android:textColorHint="#999" />
-
-        <EditText
-            android:id="@+id/edit_text_email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:drawableStart="@drawable/ic_email_black_24dp"
-            android:drawablePadding="5dp"
-            android:ems="10"
-            android:hint="Email"
-            android:inputType="textEmailAddress"
-            android:textColor="#000"
-            android:textColorHint="#999" />
-
-        <EditText
-            android:id="@+id/edit_text_contactno"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:drawableStart="@drawable/ic_phone_black_24dp"
-            android:drawablePadding="5dp"
-            android:ems="10"
-            android:hint="Contact No"
-            android:inputType="text"
-            android:textColor="#000"
-            android:textColorHint="#999" />
-
-        <Button
+        <TextView
             android:id="@+id/btn_sign_up"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="30dp"
+            android:layout_marginEnd="40dp"
             android:background="@drawable/selector_xml_btn_orange"
-            android:text="@string/signup" />
+            android:drawableStart="@drawable/ic_arrow_forward_black_24dp"
+            android:padding="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <EditText
+        app:layout_constraintBottom_toTopOf="@id/constraintlyoutbottom"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="match_parent"
+        android:layout_marginStart="30dp"
+        android:layout_height="wrap_content"
+        android:inputType="textEmailAddress"
+        android:ems="15"
+        android:textSize="14sp"
+        android:id="@+id/edit_text_contactno"
+        android:hint="Contact no"
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginTop="50dp"
+        android:textColor="@color/white"
+        android:paddingLeft="5dp"
+        android:drawablePadding="15dp"
+        android:textColorHint="#999"/>
 
-    </LinearLayout>
+    <EditText
+        app:layout_constraintBottom_toTopOf="@id/edit_text_contactno"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:ems="15"
+        android:layout_marginEnd="40dp"
+        android:id="@+id/edit_text_email"
+        android:hint="Email"
+        android:textSize="14sp"
+        android:layout_marginStart="30dp"
+        android:layout_marginBottom="15dp"
+        android:textColor="#000"
+        android:paddingLeft="5dp"
+        android:drawablePadding="5dp"
+        android:textColorHint="#999"/>
+    <EditText
+        app:layout_constraintBottom_toTopOf="@id/edit_text_email"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:ems="15"
+        android:layout_marginEnd="40dp"
+        android:id="@+id/edit_text_fullname"
+        android:hint="Fullname"
+        android:textSize="14sp"
+        android:layout_marginStart="30dp"
+        android:layout_marginBottom="15dp"
+        android:textColor="#000"
+        android:paddingLeft="5dp"
+        android:drawablePadding="5dp"
+        android:textColorHint="#999"/>
+    <EditText
+        app:layout_constraintBottom_toTopOf="@id/edit_text_fullname"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:ems="15"
+        android:layout_marginEnd="40dp"
+        android:id="@+id/edit_text_username"
+        android:hint="Username"
+        android:textSize="14sp"
+        android:layout_marginStart="30dp"
+        android:layout_marginBottom="15dp"
+        android:textColor="#000"
+        android:paddingLeft="5dp"
+        android:drawablePadding="5dp"
+        android:textColorHint="#999"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
