--- a/grabbit/app/src/main/res/layout/addeditems_cartlistview.xml
+++ b/grabbit/app/src/main/res/layout/addeditems_cartlistview.xml
@@ -1,34 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_margin="2dp"
+    android:background="@color/white">
+    <View
+        android:id="@+id/view_divider_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/white"
+        >
+    </View>
     <LinearLayout
-        android:id="@+id/CartItemListId"
-        android:layout_marginTop="13dp"
-        android:layout_marginBottom="13dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
+        android:id="@+id/ll_item_list_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="10dp"
         android:orientation="horizontal"
-        android:background="@drawable/shadow_background"
-        app:layout_constraintCircleRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/view_divider_bottom">
 
 
         <ImageView
             android:id="@+id/img_product"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:padding="12dp"
-            android:layout_marginStart="15dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="center"
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true"
             android:src="@drawable/coke" />
 
         <LinearLayout
@@ -37,13 +43,15 @@
             android:orientation="vertical">
 
             <TextView
+                android:fontFamily="@font/open_sans_bold"
                 android:id="@+id/txt_product_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="10dp"
                 android:text="Coke"
-                android:textSize="20sp"/>
+                android:textColor="@color/homeTxtProductHeading"
+                android:textSize="18sp"/>
 
             <TextView
                 android:id="@+id/txt_product_price"
@@ -52,7 +60,8 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="5dp"
                 android:text="Rs 40"
-                android:textSize="20sp"/>
+                android:fontFamily="@font/open_sans_regular"
+                android:textSize="18sp"/>
         </LinearLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -63,7 +72,7 @@
                 android:id="@+id/btn_remove"
                 android:layout_width="35dp"
                 android:layout_height="wrap_content"
-                android:paddingLeft="5dp"
+                android:paddingStart="5dp"
                 app:cornerRadius="25dp"
                 android:layout_marginEnd="20dp"
                 app:icon="@drawable/ic_clear_black_24dp"
