--- a/grabbit/app/src/main/res/layout/fragment_cart.xml
+++ b/grabbit/app/src/main/res/layout/fragment_cart.xml
@@ -11,25 +11,6 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/toolbar_home"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="15dp"
-            android:background="@color/colorOrange"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-            <androidx.appcompat.widget.AppCompatTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/appBarCart"
-                android:textColor="@color/white"
-                android:textSize="20sp"/>
-
-        </com.google.android.material.appbar.AppBarLayout>
-
         <ScrollView
             android:id="@+id/scroll_view"
             android:layout_width="0dp"
@@ -37,16 +18,31 @@
             android:paddingTop="5dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar_home"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/btnCheckout"
             >
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/cart_item_listrv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="70dp"
+                android:layout_marginBottom="10dp"
                 />
         </ScrollView>
+
+        <TextView
+            android:id="@+id/txt_total_items"
+            android:fontFamily="@font/open_sans_bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Total Items : 5"
+            android:layout_marginStart="15dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="25dp"
+            android:textSize="18dp"
+            android:textColor="@color/homeTxtProductHeading"
+            >
+        </TextView>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnCheckout"
@@ -56,7 +52,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:text="@string/checkout"
             app:cornerRadius="25dp"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginEnd="35dp"
             android:layout_marginBottom="15dp">
         </com.google.android.material.button.MaterialButton>
     </androidx.constraintlayout.widget.ConstraintLayout>
