--- a/grabbit/app/src/main/res/layout/itemlist_view_onmain.xml
+++ b/grabbit/app/src/main/res/layout/itemlist_view_onmain.xml
@@ -3,29 +3,39 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
-
+    android:orientation="vertical"
+    android:layout_margin="2dp"
+    android:background="@color/white">
+    <View
+        android:id="@+id/view_divider_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/white"
+        >
+    </View>
     <LinearLayout
-        android:id="@+id/itemlistid"
-        android:layout_marginTop="13dp"
-        android:layout_marginBottom="13dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
-        android:background="@drawable/shadow_background"
+        android:id="@+id/ll_item_list_id"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="15dp"
+        android:padding="10dp"
         android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
 
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/view_divider_bottom"
+        app:layout_constraintEnd_toStartOf="@+id/btn_add_item_to_cart">
 
         <ImageView
-            android:id="@+id/item_image_home"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:padding="12dp"
+            android:contentDescription="@string/productContentDescription"
+            android:id="@+id/img_home"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="center"
+            android:scaleType="fitCenter"
+            android:adjustViewBounds="true"
             android:src="@drawable/coke" />
 
         <LinearLayout
@@ -34,41 +44,40 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/item_name_home"
+                android:layout_gravity="top"
+                android:fontFamily="@font/open_sans_bold"
+                android:id="@+id/txt_name_home"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="10dp"
                 android:text="Coke"
-                android:textSize="20sp"/>
+                android:textColor="@color/homeTxtProductHeading"
+                android:textSize="18sp"
+                />
 
             <TextView
-                android:id="@+id/item_price_home"
+                android:fontFamily="@font/open_sans_regular"
+                android:id="@+id/txt_price_home"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/homeTxtProductHeading"
                 android:layout_marginLeft="5dp"
-                android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:text="Rs 40"
-                android:textSize="20sp"/>
+                android:textSize="18sp"/>
         </LinearLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/add_item_to_cart"
-                android:layout_width="35dp"
-                android:layout_height="wrap_content"
-                android:paddingLeft="5dp"
-                android:layout_marginEnd="20dp"
-                app:cornerRadius="25dp"
-                app:icon="@drawable/ic_add_black_24dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
     </LinearLayout>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_add_item_to_cart"
+        android:padding="5dp"
+        android:layout_width="35dp"
+        android:layout_height="45dp"
+        app:icon="@drawable/ic_add_black_24dp"
+        app:cornerRadius="25dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
