fix issue with textfield on login signup where password is active after view initialization

--- a/grabbit/app/src/main/res/layout/activity_login.xml
+++ b/grabbit/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginStart="30dp"
         android:text="Welcome \nBack"
-        android:textColor="@color/white"
+        android:textColor="@color/colorGrey"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/back_arrow"
@@ -40,7 +40,7 @@
         android:contextClickable="true"
         android:layout_marginBottom="30dp"
         android:layout_marginStart="30dp"
-        android:textColor="@color/white"
+        android:textColor="@color/colorDarkGray"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
@@ -59,7 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:text="Sign in"
-            android:textColor="@color/white"
+            android:textColor="@color/colorGrey"
             android:textSize="25sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -79,38 +79,38 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
     <EditText
-        app:layout_constraintBottom_toTopOf="@id/constraintlyoutbottom"
+        app:layout_constraintBottom_toTopOf="@id/edit_text_password"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_width="match_parent"
         android:layout_marginStart="30dp"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
+        android:inputType="text"
         android:ems="15"
         android:textSize="14sp"
-        android:id="@+id/edit_text_password"
-        android:hint="Password"
-        android:layout_marginBottom="20dp"
+        android:id="@+id/edit_text_username"
+        android:hint="Username"
+        android:layout_marginBottom="15dp"
         android:layout_marginEnd="40dp"
         android:layout_marginTop="50dp"
-        android:textColor="@color/white"
+        android:textColor="@color/colorDarkGray"
         android:paddingLeft="5dp"
         android:drawablePadding="15dp"
         android:textColorHint="#999"/>
 
     <EditText
-        app:layout_constraintBottom_toTopOf="@id/edit_text_password"
+        app:layout_constraintBottom_toTopOf="@id/constraintlyoutbottom"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="15"
         android:layout_marginEnd="40dp"
-        android:id="@+id/edit_text_username"
-        android:hint="Username"
+        android:id="@+id/edit_text_password"
+        android:hint="Password"
         android:textSize="14sp"
         android:layout_marginStart="30dp"
-        android:layout_marginBottom="15dp"
-        android:textColor="#000"
+        android:layout_marginBottom="20dp"
+        android:textColor="@color/colorDarkGray"
         android:paddingLeft="5dp"
         android:drawablePadding="5dp"
         android:textColorHint="#999"/>
