--- a/grabbit/app/src/main/res/layout/activity_signup.xml
+++ b/grabbit/app/src/main/res/layout/activity_signup.xml
@@ -79,17 +79,17 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
     <EditText
-        app:layout_constraintBottom_toTopOf="@id/constraintlyoutbottom"
+        app:layout_constraintBottom_toTopOf="@id/edit_text_fullname"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_width="match_parent"
         android:layout_marginStart="30dp"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
+        android:inputType="text"
         android:ems="15"
         android:textSize="14sp"
-        android:id="@+id/edit_text_contactno"
-        android:hint="Contact no"
-        android:layout_marginBottom="20dp"
+        android:id="@+id/edit_text_username"
+        android:hint="Username"
+        android:layout_marginBottom="15dp"
         android:layout_marginEnd="40dp"
         android:layout_marginTop="50dp"
         android:textColor="@color/white"
@@ -102,7 +102,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
+        android:inputType="textEmailAddress"
         android:ems="15"
         android:layout_marginEnd="40dp"
         android:id="@+id/edit_text_email"
@@ -119,7 +119,7 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
+        android:inputType="text"
         android:ems="15"
         android:layout_marginEnd="40dp"
         android:id="@+id/edit_text_fullname"
@@ -132,18 +132,18 @@
         android:drawablePadding="5dp"
         android:textColorHint="#999"/>
     <EditText
-        app:layout_constraintBottom_toTopOf="@id/edit_text_fullname"
+        app:layout_constraintBottom_toTopOf="@id/constraintlyoutbottom"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPassword"
+        android:inputType="number"
         android:ems="15"
         android:layout_marginEnd="40dp"
-        android:id="@+id/edit_text_username"
-        android:hint="Username"
+        android:id="@+id/edit_text_contactno"
+        android:hint="Contact no"
         android:textSize="14sp"
         android:layout_marginStart="30dp"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="20dp"
         android:textColor="#000"
         android:paddingLeft="5dp"
         android:drawablePadding="5dp"
