--- a/grabbit/app/src/main/res/layout/addeditems_cartlistview.xml
+++ b/grabbit/app/src/main/res/layout/addeditems_cartlistview.xml
@@ -43,7 +43,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:fontFamily="@font/open_sans_bold"
+                android:fontFamily="@font/sofia_pro_semi_bold"
                 android:id="@+id/txt_product_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -60,25 +60,26 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="5dp"
                 android:text="Rs 40"
-                android:fontFamily="@font/open_sans_regular"
+                android:fontFamily="@font/sofia_pro_regular"
                 android:textSize="18sp"/>
         </LinearLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
-            <com.google.android.material.button.MaterialButton
+            <ImageButton
                 android:id="@+id/btn_remove"
+                android:padding="5dp"
                 android:layout_width="35dp"
-                android:layout_height="wrap_content"
-                android:paddingStart="5dp"
-                app:cornerRadius="25dp"
-                android:layout_marginEnd="20dp"
-                app:icon="@drawable/ic_clear_black_24dp"
+                android:layout_height="35dp"
+                android:src="@drawable/ic_clear_black_24dp"
+                android:layout_marginEnd="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:background="@drawable/selector_xml_btn_orange"
+                style="@style/Widget.AppCompat.ImageButton">
+            </ImageButton>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
