--- a/grabbit/app/src/main/res/layout/fragment_cart.xml
+++ b/grabbit/app/src/main/res/layout/fragment_cart.xml
@@ -11,6 +11,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        
         <ScrollView
             android:id="@+id/scroll_view"
             android:layout_width="0dp"
@@ -31,15 +32,14 @@
 
         <TextView
             android:id="@+id/txt_total_items"
-            android:fontFamily="@font/open_sans_bold"
+            android:fontFamily="@font/sofia_pro_semi_bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Total Items : 5"
             android:layout_marginStart="15dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="25dp"
-            android:textSize="18dp"
+            android:textSize="18sp"
             android:textColor="@color/homeTxtProductHeading"
             >
         </TextView>
