change font family

--- a/grabbit/app/src/main/res/layout/activity_signup.xml
+++ b/grabbit/app/src/main/res/layout/activity_signup.xml
@@ -25,6 +25,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginStart="30dp"
         android:text="Create \naccount"
+        android:fontFamily="@font/sofia_pro_semi_bold"
         android:textColor="@color/white"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,6 +39,7 @@
         android:layout_height="wrap_content"
         android:text="Sign in"
         android:contextClickable="true"
+        android:fontFamily="@font/sofia_pro_regular"
         android:layout_marginBottom="30dp"
         android:layout_marginStart="30dp"
         android:textColor="@color/white"
@@ -59,6 +61,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:text="Sign up"
+            android:fontFamily="@font/sofia_pro_semi_bold"
             android:textColor="@color/white"
             android:textSize="25sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -86,6 +89,7 @@
         android:layout_height="wrap_content"
         android:inputType="text"
         android:ems="15"
+        android:fontFamily="@font/sofia_pro_regular"
         android:textSize="14sp"
         android:id="@+id/edit_text_username"
         android:hint="Username"
@@ -105,6 +109,7 @@
         android:inputType="textEmailAddress"
         android:ems="15"
         android:layout_marginEnd="40dp"
+        android:fontFamily="@font/sofia_pro_regular"
         android:id="@+id/edit_text_email"
         android:hint="Email"
         android:textSize="14sp"
@@ -123,6 +128,7 @@
         android:ems="15"
         android:layout_marginEnd="40dp"
         android:id="@+id/edit_text_fullname"
+        android:fontFamily="@font/sofia_pro_regular"
         android:hint="Fullname"
         android:textSize="14sp"
         android:layout_marginStart="30dp"
@@ -140,6 +146,7 @@
         android:ems="15"
         android:layout_marginEnd="40dp"
         android:id="@+id/edit_text_contactno"
+        android:fontFamily="@font/sofia_pro_regular"
         android:hint="Contact no"
         android:textSize="14sp"
         android:layout_marginStart="30dp"
