--- a/grabbit/app/src/main/res/layout/activity_information.xml
+++ b/grabbit/app/src/main/res/layout/activity_information.xml
@@ -9,8 +9,8 @@
 
     <ImageButton
         android:id="@+id/btn_scan_qr_code"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:padding="30dp"
         android:layout_marginBottom="30dp"
         android:background="@drawable/scan_qr_code_circle_btn_background"
@@ -32,9 +32,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="30dp"
-            android:fontFamily="@font/open_sans_bold"
+            android:fontFamily="@font/sofia_pro_semi_bold"
             android:text="Hi\nGraham"
-
             android:textSize="25sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +54,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/open_sans_regular"
+                android:fontFamily="@font/sofia_pro_regular"
                 android:text="My wallet"
                 android:textColor="@color/white"
                 android:textSize="18sp" />
@@ -70,7 +69,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="30dp"
-                    android:fontFamily="@font/open_sans_extra_bold"
+                    android:fontFamily="@font/sofia_pro_semi_bold"
                     android:textColor="@color/white"
                     android:drawableStart="@drawable/ic_rupee"
                     android:drawablePadding="5dp"
@@ -109,7 +108,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/open_sans_regular"
+                android:fontFamily="@font/sofia_pro_regular"
                 android:text="Item purchased"
                 android:textColor="@color/white"
                 android:textSize="18sp" />
