--- a/grabbit/app/src/main/res/layout/activity_login.xml
+++ b/grabbit/app/src/main/res/layout/activity_login.xml
@@ -25,6 +25,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginStart="30dp"
         android:text="Welcome \nBack"
+        android:fontFamily="@font/sofia_pro_semi_bold"
         android:textColor="@color/colorGrey"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,6 +39,7 @@
         android:layout_height="wrap_content"
         android:text="Sign up"
         android:contextClickable="true"
+        android:fontFamily="@font/sofia_pro_regular"
         android:layout_marginBottom="30dp"
         android:layout_marginStart="30dp"
         android:textColor="@color/colorDarkGray"
@@ -59,6 +61,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:text="Sign in"
+            android:fontFamily="@font/sofia_pro_semi_bold"
             android:textColor="@color/colorGrey"
             android:textSize="25sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -89,6 +92,7 @@
         android:textSize="14sp"
         android:id="@+id/edit_text_username"
         android:hint="Username"
+        android:fontFamily="@font/sofia_pro_regular"
         android:layout_marginBottom="15dp"
         android:layout_marginEnd="40dp"
         android:layout_marginTop="50dp"
@@ -107,6 +111,7 @@
         android:layout_marginEnd="40dp"
         android:id="@+id/edit_text_password"
         android:hint="Password"
+        android:fontFamily="@font/sofia_pro_regular"
         android:textSize="14sp"
         android:layout_marginStart="30dp"
         android:layout_marginBottom="20dp"
